--- a/index.html
+++ b/index.html
@@ -326,6 +326,9 @@
                     数据过渡：张高歌（2301111752@stu.pku.edu.cn）、陈彦（2301111755@stu.pku.edu.cn）、聂新崴（2301111760@stu.pku.edu.cn）</br>
                     网页可视化：周孙鹏（2301111759@stu.pku.edu.cn）、肖维（xiaowei@pku.edu.cn）</br>
                 </p>
+                <div style="text-align: center">
+                    <img alt="" src="hezhao.jpg" style="margin: 0 auto;" width=500px width="auto"/>
+                    </div>
             </div>
             <div id="infoC" class="info-content">
                 <p style="font-size: 18px;">对于本项目有任何疑问，请联系</br> Dr.聂勇（nieyong@pku.edu.cn）</p>
